Move footer out of the way, stop cutting off notes

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+#footer {
+  top: 0;
+  -webkit-border-radius: 0;
+  height: auto;
+}
+
 .content {
   font-family: "Helvetica Neue";
 }
